--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,8 +1,11 @@
-﻿events {}
+events {
+    worker_connections 1024;
+}
 
 http {
     include /etc/nginx/mime.types;
-    
+    default_type application/octet-stream;
+
     server {
         listen 80;
         
@@ -14,8 +17,14 @@ http {
         
         location /api/ {
             proxy_pass http://backend:8080;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
             proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
