Fix CI/CD pipeline - add test configuration and simplify workflow

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-﻿spring.application.name=viatab-backend
+spring.application.name=viatab-backend
 server.port=8080
 
-# Database configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/viatab
-spring.datasource.username=viatab_user
-spring.datasource.password=viatab_password
+# Database configuration - using environment variables
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/viatab}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:viatab_user}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:viatab_password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA configuration
